Try Monad (wow!) - useful mindset for async workflows